Revert "Update index.html"
This reverts commit 7ee79928e7ff073e4fcc6cac886b3c0345a07924.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Header Section -->
     <header>
         <nav>
-            <h1 class="logo">JH@ ⌣ @YUSH</h1>
+            <h1 class="logo">Your Name</h1>
         </nav>
     </header>
 
@@ -18,9 +18,8 @@
     <section id="home" class="hero">
         <img src="./assets/headerimg.png" alt="Hero Image" class="hero-img">
         <div class="content">
-            <h1>Where clicks meet creativity – dive into my world of frames and flair!</h1>
-            <h2>Lens ready? Let me show you how I see the world.</h2>
-            <p>Photographer :P </p>
+            <h1>Welcome to My Portfolio</h1>
+            <p>Photographer | Artist | Storyteller</p>
         </div>
     </section>
 
