added quote para

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Header Section -->
     <header>
         <nav>
-            <h1 class="logo">Your Name</h1>
+            <h1 class="logo">JH@ ⌣ @YUSH</h1>
         </nav>
     </header>
 
@@ -19,7 +19,7 @@
         <img src="./assets/headerimg.png" alt="Hero Image" class="hero-img">
         <div class="content">
             <h1>Welcome to My Portfolio</h1>
-            <p>Photographer | Artist | Storyteller</p>
+            <p>I don't just see the world—I frame it through my lens :)</p>
         </div>
     </section>
 
