--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <!-- Gallery Section -->
     <section id="gallery" class="gallery">
-        <h2>Gallery</h2>
+        <h2>Clicks: </h2>
         <div class="photo-grid">
             <!-- Images with onclick for preview -->
             <img src="./assets/1 (1).jpg" alt="Sample 1" onclick="openPreview(this)">
@@ -71,8 +71,7 @@
 
     <!-- About Section -->
     <section id="about" class="about">
-        <h2>About Me</h2>
-        <p>I am a passionate photographer who loves turning fleeting moments into everlasting memories.</p>
+        <em>PS: Apologies for the placeholders; — my camera’s memory card is back home, or I’d have dazzled you with some real gems :) </em>
     </section>
 
     <!-- Lightbox Preview -->
