--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 Your Name. All rights reserved.</p>
+        <p>&copy; 2025 jh@_@yush. All rights reserved.</p>
     </footer>
 
     <script src="script.js"></script>
