--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
         <h2>Clicks: </h2>
         <div class="photo-grid">
             <!-- Images with onclick for preview -->
+            <img src="./assets/1 (32).jpg" alt="Sample 1" onclick="openPreview(this)">
+            <img src="./assets/1 (33).jpg" alt="Sample 1" onclick="openPreview(this)">
+
+            <img src="./assets/1 (37).jpg" alt="Sample 1" onclick="openPreview(this)">
+            <img src="./assets/1 (38).jpg" alt="Sample 1" onclick="openPreview(this)">
+            <img src="./assets/1 (39).jpg" alt="Sample 1" onclick="openPreview(this)">
+
+            <img src="./assets/1 (35).jpg" alt="Sample 1" onclick="openPreview(this)">
+            <img src="./assets/1 (36).jpg" alt="Sample 1" onclick="openPreview(this)">
+            <img src="./assets/1 (34).jpg" alt="Sample 1" onclick="openPreview(this)">
+
             <img src="./assets/1 (1).jpg" alt="Sample 1" onclick="openPreview(this)">
             <img src="./assets/1 (2).jpg" alt="Sample 2" onclick="openPreview(this)">
             <img src="./assets/1 (3).jpg" alt="Sample 3" onclick="openPreview(this)">
