--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
             <img src="./assets/1 (18).jpg" alt="Sample 18" onclick="openPreview(this)">
             <img src="./assets/1 (19).jpg" alt="Sample 19" onclick="openPreview(this)">
 
-            <img src="./assets/1 (41).jpg" alt="Sample 15" onclick="openPreview(this)">
-            <img src="./assets/1 (42).jpg" alt="Sample 15" onclick="openPreview(this)">
-            <img src="./assets/1 (40).jpg" alt="Sample 15" onclick="openPreview(this)">
+            <img src="https://res.cloudinary.com/dnf3uvf8i/image/upload/v1747317098/1_40.jpg" alt="Sample 15" onclick="openPreview(this)">
+            <img src="https://res.cloudinary.com/dnf3uvf8i/image/upload/v1747317098/1_41.jpg" alt="Sample 15" onclick="openPreview(this)">
+            <img src="https://res.cloudinary.com/dnf3uvf8i/image/upload/v1747317098/1_42.jpg" alt="Sample 15" onclick="openPreview(this)">
             
             <img src="./assets/1 (23).jpg" alt="Sample 19" onclick="openPreview(this)">
             <img src="./assets/1 (24).jpg" alt="Sample 19" onclick="openPreview(this)">
